<resources>
    <string name="app_name">Calculator</string>
    <string name="button_type">RAD</string>
    <string name="button_0">0</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_dt">.</string>
    <string name="button_eq">=</string>
    <string name="button_pm">±</string>
    <string name="button_div">÷</string>
    <string name="button_mul">×</string>
    <string name="button_sum">+</string>
    <string name="button_sub">-</string>
    <string name="button_pi">π</string>
    <string name="button_e">e</string>
    <string name="button_pow">x^y</string>
    <string name="button_clr">DEL</string>
    <string name="button_per">%</string>
    <string name="button_fact">!</string>
    <string name="button_root">√</string>
    <string name="text_cur"></string>
    <string name="text_buf"></string>
</resources>
